fixed alignment of pictures and text

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,9 @@ body {
     font-size: 18px;
     background-color: hsl(185, 75%, 39%);
     color:#000;
-    margin: 0;
+    /* margin: 0; */
+    text-align: center;
+    line-height: 1.4;
     
 }
 
@@ -23,6 +25,8 @@ body {
 }
 
 img { 
+    position: relative;
+    top: 100px;
     border: 5px solid white;
     border-radius: 50%;
     margin: 0;
@@ -44,12 +48,17 @@ img {
     border-bottom-right-radius: 20px;
 }
 
+.name {
+    position: relative;
+    top: 50px;
+}
+
 .name,
 .stats {
     font-size: 18px;
     font-weight: 700;
     color:hsl(229, 23%, 23%);
-    text-align: center;
+    /* text-align: center; */
 }
 
 .stats_info {
@@ -72,5 +81,5 @@ img {
 
 p {
     display: inline-block;
-    margin:30px 0px 30px 50px;
+    margin:30px;
 }
